--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
+blinker==1.8.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+Flask==2.2.5
 Flask-SQLAlchemy==3.1.1
-flask-restx==1.0.0  
-SQLAlchemy==2.0.40
-blinker==1.9.0
-click==8.2.0 
-colorama==0.4.6 
-flask==3.1.1
-itsdangerous==2.2.0
-jinja2==3.1.6
-markupsafe==3.0.2 
-werkzeug==3.1.3
-certifi==2025.4.26
-charset-normalizer==3.4.2
-docker==7.1.0
+flask-restx==1.0.0  # Atualize para uma versão mais recente
+greenlet==2.0.2
 idna==3.10
-pywin32==310
-requests==2.32.3 
-urllib3==2.4.0
-
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==2.1.1
+requests==2.32.3
+SQLAlchemy==2.0.40
+typing_extensions==4.13.2
+urllib3==1.26.14
+Werkzeug==2.2.2
+six==1.16.0
