--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,14 @@
-version: "3.9"
+version: "3.8"
 
 services:
   reserva:
     build:
-      context: ..
+      context: ..               # Contexto é a raiz do projeto
       dockerfile: docker/Dockerfile
     ports:
       - "5001:5001"
+    volumes:
+      - ../instance:/app/instance
     environment:
-      FLASK_ENV: development
-      FLASK_APP: app.py
-    working_dir: /app
-    command: flask run --host=0.0.0.0 --port=5001
+      - FLASK_APP=app.py
+      - FLASK_ENV=development
