--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -2,16 +2,17 @@ FROM python:3.8-slim
 
 WORKDIR /app
 
-# Copia o requirements.txt (que está na raiz, pois o contexto é ..)
-COPY requirements.txt .
-COPY instance/app.db ./instance/app.db
-
+# Copia o requirements.txt da raiz do projeto (..)
+COPY ../requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copia todo o restante dos arquivos do contexto (raiz do projeto)
-COPY . .
+# Copia todo o código da raiz para /app (..)
+COPY ../ .
+
+ENV FLASK_APP=app.py
+ENV FLASK_ENV=development
 
 EXPOSE 5001
 
-CMD [ "python", "app.py" ]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5001"]
